Fix broken style on header h1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,8 @@ header a {
 .logo-text {
     line-height: 100%;
     font-size: 200%;
-    padding: 0.5rem;
+    padding: 0.5rem;    
+    margin-bottom: 0;
 }
 
 .hidden-text {
